fixed hero paragraph text overflow

--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -13,7 +13,6 @@
   }
 
   p {
-    font-size: 1.3rem;
     margin-bottom: 2rem;
   }
 
